[workspace]
resolver = "2"
members = [
]

[workspace.package]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/Polyfrost/Nexus"
documentation = "https://docs.polyfrost.org/nexus"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://polyfrost.org"
authors = ["Polyfrost"]

[workspace.dependencies]
rspc = { version = "0.1.4" }
specta = { version = "1.0.4" }
tauri-specta = { version = "1.0.2" }
swift-rs = { version = "1.0.6" }
tokio = { version = "1.33.0" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

tracing = { git = "https://github.com/tokio-rs/tracing", rev = "29146260fb4615d271d2e899ad95a753bb42915e" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "29146260fb4615d271d2e899ad95a753bb42915e", features = ["env-filter"] }
tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "29146260fb4615d271d2e899ad95a753bb42915e" }

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "4bc6e46fc8747cd8d8a07597c1fe13c52aa16a41" }
rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "adebce542049b982dd251466d4144f4d57e92177" }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", rev = "c964bef228a90a66effc18cefcba6859c45a8e08" }
