[workspace]
resolver = "2"
members = [
	"core",
	"crates/*",
	"apps/cli",
	"apps/desktop/src-tauri"
]

[workspace.package]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/Polyfrost/Nexus"
documentation = "https://docs.polyfrost.org/nexus"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://polyfrost.org"
authors = ["Polyfrost"]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", features = [
	"rspc",
	"sqlite-create-many",
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", features = [
	"rspc",
	"sqlite-create-many",
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/Brendonovich/prisma-client-rust", features = [
	"sqlite",
], default-features = false }

rspc = { version = "1.0.0-rc.5" }
specta = { version = "2.0.0-rc.6" }
tauri-specta = { version = "2.0.0-rc.3" }
swift-rs = { version = "1.0.6" }
tokio = { version = "1.33.0" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

tracing = { git = "https://github.com/tokio-rs/tracing", rev = "29146260fb4615d271d2e899ad95a753bb42915e" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "29146260fb4615d271d2e899ad95a753bb42915e", features = ["env-filter"] }
tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "29146260fb4615d271d2e899ad95a753bb42915e" }

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "22d4392b9296e761d12aebf9b50001235f4b2be7" }
rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "b168e623a5965c8ad19e87b441dfec9273a59f8d" }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", rev = "04cee5b7ac483c1832504b5f91a955a67f80a252" }
