[workspace]
resolver = "2"
members = [
	"core",
	"crates/*",
	# "apps/cli",
	# "apps/desktop/src-tauri"
]

[workspace.package]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/Polyfrost/Nexus"
documentation = "https://docs.polyfrost.org/nexus"
readme = "README.md"
homepage = "https://polyfrost.org"
authors = ["Polyfrost"]

[workspace.dependencies]
# prisma client rust dependencies
prisma-client-rust = { git = "https://github.com/pauliesnug/prisma-client-rust", features = [
	"sqlite-create-many",
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/pauliesnug/prisma-client-rust", features = [
	"sqlite-create-many",
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/pauliesnug/prisma-client-rust", features = [
	"sqlite",
], default-features = false }

# rspc dependencies
rspc = { version = "1.0.0-rc.5", features = [
	"uuid",
	"chrono"
] }
specta = { version = "2.0.0-rc.6" }
tauri-specta = { version = "2.0.0-rc.3" }

# swift-rs for ios specific extensions
swift-rs = { version = "1.0.6" }

tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f93cfa087e6ebdcbd8ecdcccca47d73c3a89ab94" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f93cfa087e6ebdcbd8ecdcccca47d73c3a89ab94", features = ["env-filter"] }
tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "f93cfa087e6ebdcbd8ecdcccca47d73c3a89ab94" }

# general use packages
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1.0" }
async-stream = { version = "0.3" }
itertools = { version = "0.11" }
dashmap = { version = "5.5", features = ["serde"] }
regex = { version = "1.10" }
bytes = { version = "1.5" }
anyhow = { version = "1.0" }
cargo_metadata = { version = "0.18" }
serde_json = { version = "1.0" }
lazy_static = { version = "1.4" }
futures = { version = "0.3" }


[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "22d4392b9296e761d12aebf9b50001235f4b2be7" }
rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "b168e623a5965c8ad19e87b441dfec9273a59f8d" }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", rev = "04cee5b7ac483c1832504b5f91a955a67f80a252" }
