[package]
name = "generator"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
reqwest.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo_metadata.workspace = true
